Remove unnecessary use of commons lang